feat(cli, compiler): Compiler optimizations + cli entrypoints